added file store option to full wiki via config.js as per MichaelDiBernardo's suggestion

--- a/wiki/full_wiki/views/layout.html
+++ b/wiki/full_wiki/views/layout.html
@@ -12,6 +12,7 @@
             .added {color: green}
             .removed {color: red; text-decoration: line-through}
             .common {color: gray}
+            .meta {font-size: 0.8em; color: gray}
             h1.title a {text-decoration: none; color: rgb(108, 176, 142); font-family: sans-serif; font-size: 2em;}
             button { background-color: rgb(182, 217, 199) }
             pre {white-space: pre-wrap;}
