--- a/wiki/full_wiki/views/view.html
+++ b/wiki/full_wiki/views/view.html
@@ -1,5 +1,6 @@
 <div class="nav">View | <a href="/wiki/{page}/edit">Edit</a> | <a href="/wiki/">Main</a></div>
 <h1>{title}</h1>
-{content}
+{doc.content}
+<div class="meta">Last edited by {doc.user} at {doc.updatedDate} ({doc.comment})</div>
 <br/>
 
