First round of edits after technical reviews.  Many changes, looking a lot better than the first draft already.  Some more changes to come around error handling and wrappers and such. Cut simple_wiki, I don't think it's necessary. Moved around a bunch of files, Git is putting edited moved files in as delete/add instead of as renamed.

--- a/wiki/views/layout.html
+++ b/wiki/views/layout.html
@@ -2,20 +2,22 @@
     <head>
         <title>{title}</title>
         <style>
-            body { font-family: sans-serif;}
+            body {font-family: sans-serif}
             .error {color: red}
             .left {float: left; width: 49%}
             .right {float: right; width: 49% }
-            .login {float: right;}
+            .login {float: right}
+            .loginForm {display: inline}
             .content {clear: both}
-            .comparecontent {border: 1px solid; padding: 3px;}
+            .editor {width: 95%; height: 70%}
+            .comparecontent {border: 1px solid black; padding: 3px}
             .added {color: green}
             .removed {color: red; text-decoration: line-through}
             .common {color: gray}
             .meta {font-size: 0.8em; color: gray}
-            h1.title a {text-decoration: none; color: rgb(108, 176, 142); font-family: sans-serif; font-size: 2em;}
+            h1.title a {text-decoration: none; color: rgb(108, 176, 142); font-size: 2em}
             button { background-color: rgb(182, 217, 199) }
-            pre {white-space: pre-wrap;}
+            pre {white-space: pre-wrap}
         </style>
     </head>
     <body>
