--- a/wiki/views/edit.html
+++ b/wiki/views/edit.html
@@ -1,7 +1,7 @@
 <h1>{title}</h1>
 <form action="{url}" method="post">
     <input type="hidden" name="revision" value="{revision}"/>
-    <textarea name="content" style="width:95%;height:70%">{content}</textarea>
+    <textarea name="content" class="editor">{content}</textarea>
     <br/>
     <label for="comment">Comment:</label><input type="text" name="comment" value="{comment}" size="40"/>
     <div class="error">{error}</div>
