more revisions from tech review around error handling and refactoring; moved config into a seperate folder, cleanup

--- a/wiki/views/edit.html
+++ b/wiki/views/edit.html
@@ -9,5 +9,5 @@
     <button type="submit" name="preview" value="preview">Preview</button>
     <button type="submit" name="cancel" value="cancel">Cancel</button>
     <input type="hidden" name="error" value="{error}" />
-    <p><a href="https://help.github.com/articles/markdown-basics" target="_blank">Markdown help<a/></p>
+    <p><a href="https://help.github.com/articles/markdown-basics" target="_blank">Markdown help</a></p>
 </form>
