Updated with latest revisions suggested by @jcorbin. It's now over the 500 lines mark (558) so I'll come back and rip things out later with the next set of edits.

--- a/wiki/views/layout.html
+++ b/wiki/views/layout.html
@@ -15,6 +15,7 @@
             .removed {color: red; text-decoration: line-through}
             .common {color: gray}
             .meta {font-size: 0.8em; color: gray}
+            .formerror {border: 3px solid red;}
             h1.title a {text-decoration: none; color: rgb(108, 176, 142); font-size: 2em}
             button { background-color: rgb(182, 217, 199) }
             pre {white-space: pre-wrap}
