--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -1,7 +1,7 @@
 <td><%= user.gender %></td>
-<td><%= device.method %></td>
-<td><%= device.format %></td>
-<td><%= device.trial %></td>
-<td><%= device.steps %></td>
+<td><%= parser.device.method %></td>
+<td><%= parser.format %></td>
+<td><%= parser.device.trial %></td>
+<td><%= parser.device.steps %></td>
 <td><%= steps %></td>
-<td><%= steps - device.steps %></td>
+<td><%= steps - parser.device.steps %></td>
