--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -1,7 +1,7 @@
-<td><%= user.gender %></td>
-<td><%= parser.device.method %></td>
-<td><%= parser.format %></td>
-<td><%= parser.device.trial %></td>
-<td><%= parser.device.steps %></td>
-<td><%= steps %></td>
-<td><%= steps - parser.device.steps %></td>
+<td><%= analyzer.user.gender %></td>
+<td><%= analyzer.device.method %></td>
+<td><%= analyzer.parser.format %></td>
+<td><%= analyzer.device.trial %></td>
+<td><%= analyzer.device.steps %></td>
+<td><%= analyzer.steps %></td>
+<td><%= analyzer.steps - analyzer.device.steps %></td>
