Revised wiki to use jQuery and AJAX calls for content instead of loading each page through a static route.  Overall, I find this way a bit nicer, but in total I now have over 800 lines instead of under 500.  Also the split between which things are on different routes (view/edit/list) vs which things are AJAXy (login, get content, save) feels sometimes a bit arbitrary, I want to take another look at the whole thing and how it's structured and if there's a better place to make that split.  And then trim down the code to < 500 lines, possibly by removing one of the couch store or file store, or possibly by putting more code on the client side or server side to simplify things, or possibly by cutting some features.  I'll keep it on a separate branch for now because it feels a bit less put together than what's on the master with everything server side, I'll merge it back in once I get it back down < 500 lines.

--- a/wiki/views/edit.html
+++ b/wiki/views/edit.html
@@ -1,13 +1,23 @@
-<h1>{title}</h1>
-<form action="{url}" method="post">
-    <input type="hidden" name="revision" value="{revision}"/>
-    <textarea name="content" class="editor">{content}</textarea>
-    <br/>
-    <label for="comment">Comment:</label><input type="text" name="comment" value="{comment}" size="40"/>
-    <div class="error">{error}</div>
-    <button type="submit">Save</button>
-    <button type="submit" name="preview" value="preview">Preview</button>
-    <button type="submit" name="cancel" value="cancel">Cancel</button>
-    <input type="hidden" name="error" value="{error}" />
+<div id="editView">
+    <div id="preview" style="display:none">
+        <h1>{page} Preview</h1>
+        <div id="previewContent"></div>
+        <hr/>
+    </div>
+    <h1>Editing {page}</h1>
+    <input type="hidden" name="revision" id="revision"/>
+    <input type="hidden" name="page" value="{page}"/>
+    <textarea name="content" class="editor" id="editor"></textarea><br/>
+    <label for="comment">Comment:</label><input type="text" name="comment" id="comment" size="40"/>
+    <button id="previewButton">Preview</button>
+    <button id="saveButton">Save</button>
+    <button><a href="/wiki/view?page={page}">Cancel</a></button>
+
     <p><a href="https://help.github.com/articles/markdown-basics" target="_blank">Markdown help</a></p>
-</form>
+</div>
+
+<div id="compareView" class="right" style="display:none">
+    <h2 id="compareTitle"></h2>
+    <div class="comparecontent"><pre id="comparecontent"></pre></div>
+    <br/>Comment: <span id="comparecomment"></span>
+</div>
