--- a/wiki/views/list.html
+++ b/wiki/views/list.html
@@ -1,10 +1,7 @@
-<h1>Existing pages</h1>
-{for page in pages}
-    <a href="/wiki/{page.id}">{page.id}</a><br/>
-{/for}
-<form action="/wiki/add" method="post">
-    <p>
-        <button type="submit">Add new page</button>
-        <input type="text" name="title" value="title"/>
-    </p>
-</form>
+<div id="listView">
+    <h1>Existing Pages</h1>
+    <div id="pages"></div>
+    <form action="/wiki/add" method="post" id="addform">
+        <p><button type="submit">Add new page</button><input type="text" name="title" value="title"/></p>
+    </form>
+</div>
