Rename controller actions

--- a/pedometer/views/detail.erb
+++ b/pedometer/views/detail.erb
@@ -3,7 +3,7 @@
 <link href="/styles.css" rel="stylesheet" type="text/css" />
 
 <html>
-    <a class="nav" href='/data'>Back to Data</a>
+    <a class="nav" href='/trials'>Back to Trials</a>
     <table class="summary">
         <tr>
             <th>User</th>
