removed some of the AJAX calls, removed the file store and extra config, started cutting things down to fit

--- a/wiki/views/list.html
+++ b/wiki/views/list.html
@@ -1,5 +1,8 @@
 <div id="listView">
     <h1>Existing Pages</h1>
+    {for page in pages}
+        <a href="/wiki/view/{page.id}">{page.id}</a><br/>
+    {/for}
     <div id="pages"></div>
     <form action="/wiki/add" method="post" id="addform">
         <p><button type="submit">Add new page</button><input type="text" name="title" value="title"/></p>
