--- a/wiki/views/view.html
+++ b/wiki/views/view.html
@@ -1,6 +1,6 @@
 <div id="pageView">
-    <div class="nav">View | <a href="/wiki/edit?page={page}">Edit</a> | <a href="/wiki/">Main</a></div>
+    <div class="nav">View | <a href="/wiki/edit/{page}">Edit</a> | <a href="/wiki/">Main</a></div>
     <h1>{page}</h1>
-    <div id="pageContent"></div>
-    <div class="meta" id="pageMeta"></div>
+    <div id="pageContent">{doc.content}</div>
+    <div class="meta">Last edited by {doc.user} at {doc.updatedDate} - {doc.comment}</div>
 </div>
