--- a/wiki/views/edit.html
+++ b/wiki/views/edit.html
@@ -1,18 +1,14 @@
 <div id="editView">
     <div id="preview" style="display:none">
         <h1>{page} Preview</h1>
-        <div id="previewContent"></div>
-        <hr/>
+        <div id="previewContent"></div><hr/>
     </div>
     <h1>Editing {page}</h1>
-    <input type="hidden" name="revision" id="revision"/>
+    <input type="hidden" name="revision" id="revision" value="{doc._rev}"/>
     <input type="hidden" name="page" value="{page}"/>
-    <textarea name="content" class="editor" id="editor"></textarea><br/>
+    <textarea name="content" class="editor" id="editor">{doc.content}</textarea><br/>
     <label for="comment">Comment:</label><input type="text" name="comment" id="comment" size="40"/>
-    <button id="previewButton">Preview</button>
-    <button id="saveButton">Save</button>
-    <button><a href="/wiki/view?page={page}">Cancel</a></button>
-
+    <button id="previewButton">Preview</button><button id="saveButton">Save</button><button><a href="/wiki/view/{page}">Cancel</a></button>
     <p><a href="https://help.github.com/articles/markdown-basics" target="_blank">Markdown help</a></p>
 </div>
 
@@ -21,3 +17,8 @@
     <div class="comparecontent"><pre id="comparecontent"></pre></div>
     <br/>Comment: <span id="comparecomment"></span>
 </div>
+
+<script type="text/javascript">
+    $('#previewButton').click(showPreview);
+    $('#saveButton').click(save);
+</script>
