trimmed down to 515 lines of application javascript, html and css

--- a/wiki/views/layout.html
+++ b/wiki/views/layout.html
@@ -14,9 +14,7 @@
         </div>
         <script type="text/javascript">
             var page = '{page}';
-            $(function(){
-                showLoginView();
-            });
+            $(showLoginView);
             $({handler});
         </script>
         <div class="content">
