Fix rescues in controller

--- a/pedometer/views/trials.erb
+++ b/pedometer/views/trials.erb
@@ -1,5 +1,5 @@
 <link href="/styles.css" rel="stylesheet" type="text/css" />
-
+<div class="error"><%= @error %></div>
 <html>
   <table class="summary">
     <th>User</th>
