--- a/wiki/views/view.html
+++ b/wiki/views/view.html
@@ -1,4 +1,4 @@
-<div class="nav">View | <a href="/wiki/edit/{page}">Edit</a> | <a href="/wiki/">Main</a></div>
+<div class="nav">View | <a href="/wiki/{page}/edit">Edit</a> | <a href="/wiki/">Main</a></div>
 <h1>{page}</h1>
 <div id="pageContent">{doc.content}</div>
 <div class="meta">Last edited by {doc.user} at {doc.updatedDate} - {doc.comment}</div>
