--- a/wiki/views/edit.html
+++ b/wiki/views/edit.html
@@ -8,7 +8,7 @@
     <input type="hidden" name="page" value="{page}"/>
     <textarea name="content" class="editor" id="editor">{doc.content}</textarea><br/>
     <label for="comment">Comment:</label><input type="text" name="comment" id="comment" size="40"/>
-    <button id="previewButton">Preview</button><button id="saveButton">Save</button><button><a href="/wiki/view/{page}">Cancel</a></button>
+    <button id="previewButton">Preview</button><button id="saveButton">Save</button><button><a href="/wiki/{page}">Cancel</a></button>
     <p><a href="https://help.github.com/articles/markdown-basics" target="_blank">Markdown help</a></p>
 </div>
 
