--- a/pedometer/views/trial.erb
+++ b/pedometer/views/trial.erb
@@ -17,9 +17,9 @@
             <th>Time</th>
         </tr>
         <tr>
-            <%= erb :summary, :locals => {:analyzer => @analyzer} %>
-            <td><%= ViewHelper.format_distance(@analyzer.distance) %></td>
-            <td><%= ViewHelper.format_time(@analyzer.time) %></td>
+            <%= erb :summary, :locals => {:analyzer => @trial.analyzer} %>
+            <td><%= ViewHelper.format_distance(@trial.analyzer.distance) %></td>
+            <td><%= ViewHelper.format_time(@trial.analyzer.time) %></td>
         </tr>
     </table>
 
@@ -27,7 +27,7 @@
     <div id="container-filtered"></div>
 
     <% if @match_filtered_data %>
-        <% comparison_title = @analyzer.parser.is_data_combined? ? 'Separated' : 'Combined' %>
+        <% comparison_title = @trial.analyzer.parser.is_data_combined? ? 'Separated' : 'Combined' %>
         <div id="container-comparison"></div>
     <% end %>
 </html>
@@ -38,7 +38,7 @@
             title: { text: 'Dot Product Data' },
             series: [{
                 name: 'Dot Product Data',
-                data: <%= ViewHelper.limit_1000(@analyzer.parser.dot_product_data) %>
+                data: <%= ViewHelper.limit_1000(@trial.analyzer.parser.dot_product_data) %>
             }]
         });
 
@@ -46,7 +46,7 @@
             title: { text: 'Filtered Data' },
             series: [{
                 name: 'Filtered Data',
-                data: <%= ViewHelper.limit_1000(@analyzer.parser.filtered_data) %>
+                data: <%= ViewHelper.limit_1000(@trial.analyzer.parser.filtered_data) %>
             }]
         });
 
@@ -54,8 +54,8 @@
             $('#container-comparison').highcharts({
                 title: { text: 'Comparison to ' + '<%= comparison_title %>' },
                 series: [{
-                    name: '<%= @analyzer.parser.format.capitalize %>',
-                    data: <%= ViewHelper.limit_1000(@analyzer.parser.filtered_data) %>
+                    name: '<%= @trial.analyzer.parser.format.capitalize %>',
+                    data: <%= ViewHelper.limit_1000(@trial.analyzer.parser.filtered_data) %>
                 }, {
                     name: '<%= comparison_title %>',
                     data: <%= ViewHelper.limit_1000(@match_filtered_data) %>
