--- a/pedometer/views/trial.erb
+++ b/pedometer/views/trial.erb
@@ -17,7 +17,7 @@
             <th>Time</th>
         </tr>
         <tr>
-            <%= erb :summary, :locals => {:analyzer => @trial.analyzer} %>
+            <%= erb :summary, locals: { analyzer: @trial.analyzer } %>
             <td><%= ViewHelper.format_distance(@trial.analyzer.distance) %></td>
             <td><%= ViewHelper.format_time(@trial.analyzer.time) %></td>
         </tr>
