--- a/pedometer/views/trial.erb
+++ b/pedometer/views/trial.erb
@@ -8,7 +8,7 @@
         <tr>
             <th>User</th>
             <th>Method</th>
-            <th>Measurement</th>
+            <th>Format</th>
             <th>Trial</th>
             <th>Actual</th>
             <th>Calculated</th>
