--- a/pedometer/views/trials.erb
+++ b/pedometer/views/trials.erb
@@ -4,7 +4,7 @@
   <table class="summary">
     <th>User</th>
     <th>Method</th>
-    <th>Input Format</th>
+    <th>Format</th>
     <th>Trial</th>
     <th>Actual</th>
     <th>Calculated</th>
