--- a/pedometer/views/trial.erb
+++ b/pedometer/views/trial.erb
@@ -4,24 +4,7 @@
 
 <html>
     <a class="nav" href='/trials'>Back to Trials</a>
-    <table class="summary">
-        <tr>
-            <th>User</th>
-            <th>Method</th>
-            <th>Format</th>
-            <th>Trial</th>
-            <th>Actual</th>
-            <th>Calculated</th>
-            <th>Delta</th>
-            <th>Distance</th>
-            <th>Time</th>
-        </tr>
-        <tr>
-            <%= erb :summary, locals: { analyzer: @trial.analyzer } %>
-            <td><%= ViewHelper.format_distance(@trial.analyzer.distance) %></td>
-            <td><%= ViewHelper.format_time(@trial.analyzer.time) %></td>
-        </tr>
-    </table>
+    <%= erb :summary, locals: { trials: [@trial], detail_hidden: false } %>
 
     <div id="container-dot-product"></div>
     <div id="container-filtered"></div>
